[gd_scene load_steps=50 format=3 uid="uid://drcrf1wak4m67"]

[ext_resource type="PackedScene" uid="uid://bh6eliw5jewgq" path="res://src/enemies/enemy.tscn" id="1_wekgr"]
[ext_resource type="Script" path="res://src/enemies/bringer_of_death.gd" id="2_tf6u3"]
[ext_resource type="Texture2D" uid="uid://krpnxj607yo1" path="res://resources/textures/Light/circle.png" id="3_47bwf"]
[ext_resource type="Texture2D" uid="uid://cuvj26mw1tt7m" path="res://resources/textures/Enemy/BringerOfDeath/Bringer-of-Death-SpritSheet.png" id="4_lhit7"]
[ext_resource type="PackedScene" uid="uid://6qsaq4c7hwg3" path="res://src/utilities/hit_box.tscn" id="5_osdsh"]
[ext_resource type="AudioStream" uid="uid://bi4ya5bfx3f7r" path="res://resources/audio/SoundEffect/Enemy/BringerOfDeath/attack.ogg" id="6_rhmxa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkxas"]
size = Vector2(15.3771, 38.3137)

[sub_resource type="Animation" id="Animation_ing33"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sounds/SwordAttakSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p7uji"]
length = 0.714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5, 0.571429, 0.642857),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0823529)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.666667, 0.666667, 1), Color(0, 0.666667, 0.666667, 0)]
}

[sub_resource type="Animation" id="Animation_rxbvk"]
length = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Hit"]
}

[sub_resource type="Animation" id="Animation_rxcvk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sounds/SwordAttakSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_842js"]
length = 0.214286
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="Animation" id="Animation_ha4vk"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3dcus"]
_data = {
"Attack": SubResource("Animation_ing33"),
"Death": SubResource("Animation_p7uji"),
"Hit": SubResource("Animation_rxbvk"),
"RESET": SubResource("Animation_rxcvk"),
"Run": SubResource("Animation_842js"),
"Walk": SubResource("Animation_ha4vk")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ajusp"]
atlas = ExtResource("4_lhit7")
region = Rect2(0, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_febmt"]
atlas = ExtResource("4_lhit7")
region = Rect2(140, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu800"]
atlas = ExtResource("4_lhit7")
region = Rect2(280, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_2brev"]
atlas = ExtResource("4_lhit7")
region = Rect2(420, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8x48"]
atlas = ExtResource("4_lhit7")
region = Rect2(560, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_6evfj"]
atlas = ExtResource("4_lhit7")
region = Rect2(700, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_kem3v"]
atlas = ExtResource("4_lhit7")
region = Rect2(840, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxubt"]
atlas = ExtResource("4_lhit7")
region = Rect2(980, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_tluhp"]
atlas = ExtResource("4_lhit7")
region = Rect2(0, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxbo1"]
atlas = ExtResource("4_lhit7")
region = Rect2(700, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ojad"]
atlas = ExtResource("4_lhit7")
region = Rect2(840, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4my7"]
atlas = ExtResource("4_lhit7")
region = Rect2(980, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjr2c"]
atlas = ExtResource("4_lhit7")
region = Rect2(0, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu0ry"]
atlas = ExtResource("4_lhit7")
region = Rect2(140, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t4qf"]
atlas = ExtResource("4_lhit7")
region = Rect2(280, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo8r6"]
atlas = ExtResource("4_lhit7")
region = Rect2(420, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_kijmm"]
atlas = ExtResource("4_lhit7")
region = Rect2(560, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_kurp4"]
atlas = ExtResource("4_lhit7")
region = Rect2(700, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xytgc"]
atlas = ExtResource("4_lhit7")
region = Rect2(840, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_m10gp"]
atlas = ExtResource("4_lhit7")
region = Rect2(280, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyedo"]
atlas = ExtResource("4_lhit7")
region = Rect2(420, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8iqj"]
atlas = ExtResource("4_lhit7")
region = Rect2(560, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_a84i8"]
atlas = ExtResource("4_lhit7")
region = Rect2(0, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_va163"]
atlas = ExtResource("4_lhit7")
region = Rect2(140, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_l83cm"]
atlas = ExtResource("4_lhit7")
region = Rect2(280, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6gtw"]
atlas = ExtResource("4_lhit7")
region = Rect2(420, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_taqcl"]
atlas = ExtResource("4_lhit7")
region = Rect2(560, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ccqk"]
atlas = ExtResource("4_lhit7")
region = Rect2(700, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck1ql"]
atlas = ExtResource("4_lhit7")
region = Rect2(840, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4kob"]
atlas = ExtResource("4_lhit7")
region = Rect2(980, 93, 140, 93)

[sub_resource type="SpriteFrames" id="SpriteFrames_vyb65"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajusp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_febmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu800")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2brev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8x48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6evfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kem3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxubt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tluhp")
}],
"loop": false,
"name": &"Attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxbo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ojad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4my7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjr2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu0ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t4qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo8r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kijmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kurp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xytgc")
}],
"loop": false,
"name": &"Death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m10gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyedo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8iqj")
}],
"loop": false,
"name": &"Hit",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a84i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va163")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l83cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6gtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taqcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ccqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck1ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4kob")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_862ld"]
radius = 81.0805
height = 162.161

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7v8ju"]
size = Vector2(110.873, 96.705)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htj1b"]
size = Vector2(39.1739, 46.9417)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xl5q"]
size = Vector2(21.3676, 21.96)

[node name="BringerOfDeath" instance=ExtResource("1_wekgr")]
scale = Vector2(0.680259, 0.610556)
script = ExtResource("2_tf6u3")
movement_speed = 50
max_health = 100
damage = 5
sword_damage = 20
experience = 40
spell_damage = 20
spell_scale = 1.0
coins = 20

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-1.75241e-07, -6.55141)
scale = Vector2(0.764788, 0.512982)
shape = SubResource("RectangleShape2D_bkxas")

[node name="TransformAdjustment" parent="." index="1"]
position = Vector2(5.93544, -5.5883)
scale = Vector2(0.853918, 0.857279)

[node name="PointLight2D" type="PointLight2D" parent="TransformAdjustment" index="0"]
position = Vector2(-12.3452, -18.6335)
scale = Vector2(0.321512, 0.247087)
color = Color(0.568627, 0.4, 0.866667, 1)
texture = ExtResource("3_47bwf")

[node name="AnimationPlayer" parent="TransformAdjustment" index="1"]
autoplay = "Walk"
libraries = {
"": SubResource("AnimationLibrary_3dcus")
}

[node name="AnimatedSprite2D" parent="TransformAdjustment" index="2"]
position = Vector2(-62.9157, -37.3534)
scale = Vector2(1.53672, 1.51789)
sprite_frames = SubResource("SpriteFrames_vyb65")
animation = &"Attack"
autoplay = "Walk"
frame = 8

[node name="SwordHitBox" parent="TransformAdjustment" index="3" instance=ExtResource("5_osdsh")]

[node name="CollisionShape2D" parent="TransformAdjustment/SwordHitBox" index="0"]
position = Vector2(-67.3084, -25.922)
rotation = -0.202484
scale = Vector2(1.22634, -0.689844)
shape = SubResource("CapsuleShape2D_862ld")
disabled = true

[node name="AttackRange" type="Area2D" parent="TransformAdjustment" index="4"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransformAdjustment/AttackRange" index="0"]
position = Vector2(-63.4125, -17.7286)
shape = SubResource("RectangleShape2D_7v8ju")

[node name="AttackRangeDisableTimer" type="Timer" parent="TransformAdjustment/AttackRange" index="1"]

[node name="HurtBox" parent="." index="2"]
position = Vector2(0, -4)

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.593543, -6.05895)
shape = SubResource("RectangleShape2D_htj1b")

[node name="HitBox" parent="." index="3"]
position = Vector2(0, -4)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(5.66048e-07, -2.90259)
shape = SubResource("RectangleShape2D_5xl5q")

[node name="DamageLabel" parent="." index="4"]
offset_left = -43.9223
offset_top = -74.8833
offset_right = 44.0777
offset_bottom = 1.11674
theme_override_font_sizes/font_size = 14

[node name="SwordAttakSound" type="AudioStreamPlayer2D" parent="Sounds" index="1"]
scale = Vector2(1.18709, 1.11766)
stream = ExtResource("6_rhmxa")
volume_db = -30.0

[connection signal="body_entered" from="TransformAdjustment/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="timeout" from="TransformAdjustment/AttackRange/AttackRangeDisableTimer" to="." method="_on_attack_range_disable_timer_timeout"]

[editable path="TransformAdjustment/SwordHitBox"]
[editable path="HurtBox"]
[editable path="HitBox"]
